<resources>
    <string name="app_name">自助助手</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture_backup_btn_text">照片信息备份</string>
    <string name="wifi_manager_btn_text">无线网络信息</string>
    <string name="contact_person_btn_text">通讯录读取</string>
    <string name="camera_btn_text">拍照</string>
    <string name="goto_video_player_btn_text">视频播放</string>
    <string name="navigation_setting_text">设置</string>
    <string name="navigation_home_text">首页</string>
    <string name="navigation_lock_screen_text">锁屏</string>
    <string name="prompt_category">选择分类</string>
</resources>